crates/nash-can/tests/snapshots/kinds__phantom_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Tag 'a = Tag Int\n"
---
(
    [
        (
            "Tag",
            Arrow(
                Type,
                Type,
            ),
            [],
        ),
    ],
    [],
)
