crates/nash-can/tests/snapshots/kinds__phantom_parameter_defaults_to_type_before_higher_kinded_use.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype w = W (app tag (app option))\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 1 of little constructor `W` in `w`.
   ╭─[src/Main.nash:9:22]
 8 │ type app 'f 'a = App ('f 'a)
 9 │ type w = W (app tag (app option))
   ·                      ──────────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
