crates/nash-can/tests/snapshots/kinds__recursive_fix_infers_a_higher_kinded_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype Fix 'f = Fix ('f (Fix 'f))\n"
---
(
    [
        (
            "Fix",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Type,
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 20,
                            },
                            end: Position {
                                line: 6,
                                column: 22,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 24,
                                },
                                end: Position {
                                    line: 6,
                                    column: 30,
                                },
                            },
                            value: Named {
                                reference: QualifiedName {
                                    home: ModuleName {
                                        package: None,
                                        name: "Main",
                                    },
                                    name: "Fix",
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 28,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 30,
                                            },
                                        },
                                        value: Var(
                                            "f",
                                        ),
                                    },
                                ],
                            },
                        },
                    ],
                },
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 20,
                                },
                                end: Position {
                                    line: 6,
                                    column: 31,
                                },
                            },
                            value: App {
                                head: Located {
                                    region: Region {
                                        start: Position {
                                            line: 6,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 22,
                                        },
                                    },
                                    value: Var(
                                        "f",
                                    ),
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 24,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 30,
                                            },
                                        },
                                        value: Named {
                                            reference: QualifiedName {
                                                home: ModuleName {
                                                    package: None,
                                                    name: "Main",
                                                },
                                                name: "Fix",
                                            },
                                            args: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 6,
                                                            column: 28,
                                                        },
                                                        end: Position {
                                                            line: 6,
                                                            column: 30,
                                                        },
                                                    },
                                                    value: Var(
                                                        "f",
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                ],
                            },
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
