crates/nash-can/tests/snapshots/kinds__representation_annotation_requires_a_type_kinded_parameter.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype wrap ('f : Big) 'a = Wrap ('f 'a)\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the type annotation.
   ╭─[src/Main.nash:6:12]
 5 │ 
 6 │ type wrap ('f : Big) 'a = Wrap ('f 'a)
   ·            ──
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
