crates/nash-can/tests/snapshots/kinds__retained_self_application_in_impl_heads.snap
---
source: crates/nash-can/tests/kinds.rs
description: "type self 'f = Self ('f 'f)\ntrait Marker 'a where\n    marker : 'a -> unit\nimpl Marker (self self) where\n    marker x = ()"
---
[
    KindInfinite {
        region: Region {
            start: Position {
                line: 8,
                column: 14,
            },
            end: Position {
                line: 8,
                column: 23,
            },
        },
        context: ImplHead {
            trait_: QualifiedName {
                home: ModuleName {
                    package: None,
                    name: "Main",
                },
                name: "Marker",
            },
            index: 0,
        },
    },
]
